# Tinnyrenderimplement

./: CMakeLists.txt  geometry.cpp  geometry.h  head.hpp  hello.h  main.cpp  model.cpp  model.h  notes.md  our_gl.cpp  our_gl.h  output_floor1.tga  output_floor2.tga  output_floor_diffuse.tga  output_head.tga  output_head_tex.tga  output_lesson3.tga  output_lesson31.tga  output_lesson32.tga  output_lesson33.tga  readme.md  tgaimage.cpp  zbuffer.tga
output/: output_african_head_Depth.tga  output_african_head_Gouraud.tga  output_african_head_diffuse.tga  output_african_head_myshader.tga  output_african_head_normal.tga  output_african_head_tangent.tga  output_african_head_texture.tga  output_diablo3_pose_diffuse.tga  output_diablo3_pose_normal.tga  output_floor_Gouraud.tga  output_floor_diffuse.tga  output_head_Gourand.tga  output_head_diffuse.tga
